# Lentille

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yaml
src/: run.py
src/lentille/: __init__.py  base_embedder.py  embedder.py
src/lentille/embedders/: Resnet50Embedder.py
src/lentille/embedders/vision/: Resnet50Embedder.py
src/lentille/utils/: resnet50_preprocess.py
