[tool.poetry]
name = "talk-to-data"
version = "0.1.0"
description = ""
authors = ["Alex <46456279+the-alex-b@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "talk_to_data"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
